@@ -66,7 +66,7 @@ public class AsyncClientCustomSSL {
                             final X509Certificate[] chain,
                             final String authType) throws CertificateException {
                         final X509Certificate cert = chain[0];
-                        return "CN=httpbin.org".equalsIgnoreCase(cert.getSubjectDN().getName());
+                        return "CN=http2bin.org".equalsIgnoreCase(cert.getSubjectDN().getName());
                     }
 
                 })
@@ -75,8 +75,15 @@ public class AsyncClientCustomSSL {
                 sslcontext,
                 H2TlsStrategy.getDefaultHostnameVerifier()) {
 
-            // IMPORTANT uncomment the following method when running Java 9 or older
-            // in order to avoid the illegal reflective access operation warning
+            // IMPORTANT
+            // In order for HTTP/2 protocol negotiation to succeed one must allow access
+            // to Java 9 specific properties of SSLEngine via reflection
+            // by adding the following line to the JVM arguments
+            //
+            // --add-opens java.base/sun.security.ssl=ALL-UNNAMED
+            //
+            // or uncomment the method below
+
 //            @Override
 //            protected TlsDetails createTlsDetails(final SSLEngine sslEngine) {
 //                return new TlsDetails(sslEngine.getSession(), sslEngine.getApplicationProtocol());
@@ -92,14 +99,14 @@ public class AsyncClientCustomSSL {
 
             client.start();
 
-            final HttpHost target = new HttpHost("httpbin.org", 443, "https");
+            final HttpHost target = new HttpHost("http2bin.org", 443, "https");
             final String requestUri = "/";
             final HttpClientContext clientContext = HttpClientContext.create();
 
             final SimpleHttpRequest request = SimpleHttpRequest.get(target, requestUri);
             final Future<SimpleHttpResponse> future = client.execute(
-                    SimpleRequestProducer.create(request),
-                    SimpleResponseConsumer.create(),
+                    new SimpleRequestProducer(request),
+                    new SimpleResponseConsumer(),
                     clientContext,
                     new FutureCallback<SimpleHttpResponse>() {
 
